# voice-studio

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  README_EN.md  README_JA.md  pyproject.toml  run.py
.claude/: settings.local.json
docs/: ARCHITECTURE.md  plan.md
docs/screenshots/: README.md
src/voice_studio/: __init__.py  api.py  audio_extractor.py  cli.py  config.py  exceptions.py  logging_config.py  process_manager.py  stt.py  text_converter.py  tts.py  tts_local.py  tts_mixed.py
src/voice_studio/floating_mic/: __init__.py  audio_capture.py  batch_transcriber.py  clipboard.py  config.py  floating_window.py  i18n.py  main.py  state_manager.py  system_tray.py  websocket_client.py
src/voice_studio/streaming/: __init__.py  buffer.py  engine.py  session.py  vad.py
test_data/: README.md
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_config.py  test_exceptions.py  test_japanese_support.py  test_local_tts.py  test_local_tts_japanese.py  test_stt.py  test_text_converter.py  test_tts.py  test_tts_local.py  test_web_japanese.py
web/: index.html  package.json  tailwind.config.js  vite.config.ts
web/public/: audio-processor.js
web/src/: App.vue  main.ts  style.css
web/src/api/: index.ts  stt.ts  tts.ts  types.ts
web/src/components/common/: Button.vue  Card.vue  ProgressBar.vue  Select.vue  Spinner.vue  Toggle.vue
web/src/components/layout/: Header.vue  MainLayout.vue  Sidebar.vue
web/src/components/stt/: AudioUploader.vue  SegmentList.vue  TranscriptionResult.vue
web/src/components/tts/: AudioPlayer.vue  TextInput.vue  VoiceSelector.vue
web/src/composables/: useRealtimeSTT.ts
web/src/locales/: en-US.json  index.ts  ja-JP.json  zh-CN.json
web/src/router/: index.ts
web/src/stores/: engine.ts  settings.ts
web/src/utils/: formatTime.ts
web/src/views/: RealtimeSTTView.vue  STTView.vue  SettingsView.vue  TTSView.vue
