[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-studio"
version = "0.1.0"
description = "让声音创作触手可及 - 轻量、灵活、可扩展的声音处理工作台"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "edge-tts>=6.1.0",
    "piper-tts>=1.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[project.scripts]
vs = "voice_studio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]