[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-studio"
version = "0.1.0"
description = "让声音创作触手可及 - 轻量、灵活、可扩展的声音处理工作台"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "edge-tts>=6.1.0",
    "piper-tts>=1.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "opencc>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "structlog>=23.0.0",
    "slowapi>=0.1.9",
    "filetype>=1.2.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
vs = "voice_studio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true